--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
         </div>
 
         <div id="about_page" class="hide_page">
-            <div id="picture" class="about_card">
-            </div>
-            <div id="placeholder1" class="about_card"></div>
+            <div id="picture" class="about_card"></div>
+            <div id="swimmingpicture" class="about_card"></div>
             <div id="placeholder2" class="about_card"></div>
             <div id="abouttext" class="about_card">I am a C++ developer who focuses on making the language easier to use for new developers by making it cross platform and allowing them to build complicated apps with ease. I have been programming since the age of 10 and my skills have evolved from being stuck in tutorial hell to being able to build full complicated apps since then. My other love in life is swimming and it takes up my life from 4:45am - 6:45am every morning. I would love to be a coach for my summer team but my mom is the president and she does not want to look biased so I have to remain just a swimmer on the team for the next 2 years.</div>
             <div id="backbutton" class="about_card" onclick="load_back('about')">Back</div>
@@ -141,14 +140,22 @@
         <div id="awards_page" class="hide_page">
             <div id="coachesaward" class="awards_card"></div>
             <div id="historyaward" class="awards_card"></div>
-            <div id="placeholder1" class="awards_card"></div>
-            <div id="placeholder2" class="awards_card"></div>
+            <div id="placeholder1" class="awards_card">
+                Last year in World History 1 I had the highest grade in the entrired 9th grade class and my dad was extremely proud of me because he is a history teacher himself so I was carying on the family name
+            </div>
+            <div id="placeholder2" class="awards_card">
+                I won a coaches award in the 2020 - 2021 season and it sits proudly on my desk as a reminder of covid and that horrible year
+            </div>
             <div id="backbutton" class="awards_card" onclick="load_back('awards')">Back</div>
         </div>
-
+ 
         <div id="community_page" class="hide_page">
-            <div id="community1" class="community_card"></div>
-            <div id="community2" class="community_card"></div>
+            <div id="community1" class="community_card">
+                Last year I had the wonderfull oppertunity to time for a Special Education Swim Meet. It was a wonderfull learning experience and it really put my life into perspective. I take my body for granted and seeing people that had little to no control over their limbs do that really gave me a new outlook on life
+            </div>
+            <div id="community2" class="community_card">
+                I took a saturday going to Bell Isle to help cleanup some of the trash there. This was a fun experience because I love to be outside and while I was sunburned for a week afterwards I am still happy that I did this because you do not realize how much trash is in out enviroment untill you go and clean it up yourself
+            </div>
             <div id="placeholder1" class="community_card"></div>
             <div id="placeholder2" class="community_card"></div>
             <div id="backbutton" class="community_card" onclick="load_back('community')">Back</div>
