--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
             <div id="class3" class="education_card">
                 <div id="classname">Honors Chemistry</div>
-                <div id="classdesc">IDK IL KINDA DESCRIBE THIS CLASS LATER BRO I GOT NOTHIN FOR THIS</div>
+                <div id="classdesc">This class has just been a fun getaway for me to learn about how the world around me works. While the class is not hard the subject matter is extremely interesting and the class does teach me great problem solving skills</div>
             </div>
             <div id="resume" class="education_card" onclick="load_resume()">
                 <div>Link to resume</div>
